# pymmcore

./: .editorconfig  .gitignore  .gitmodules  .travis.yml  Dockerfile  MANIFEST.in  README.md  boost-sha256.txt  maintainer-notes.md  meson.build  pymmcore.i  pyproject.toml  setup.cfg  setup.py
.github/workflows/: build.yml  ci.yml  deploy.yml  manylinux.yml  sdist.yml  ubuntu.yml  wheel-macos.yml  wheel.yml  win-mac.yml
manylinux/: build.sh
pymmcore/: __init__.py  __init__.pyi  _version.py  pymmcore_swig.i
smoketest/: smoke.py
src/pymmcore/: __init__.py  __init__.pyi  _version.py  meson.build  pymmcore_swig.i
subprojects/: mmcore.wrap  mmdevice.wrap
tests/: test_mmcore.py
