# https://peps.python.org/pep-0517/
[build-system]
requires = ["setuptools ==72.1.0", "swig ==4.2.1", "numpy>=2.0.0"]
build-backend = "setuptools.build_meta"

# https://peps.python.org/pep-0621/
[project]
name = "pymmcore"
description = "Python bindings for MMCore, Micro-Manager's device control layer"
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.9"
license = { text = "LGPL-2.1-only" }
authors = [{ name = "Micro-Manager Team" }]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Lesser General Public License v2 (LGPLv2)",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering",
    "Topic :: System :: Hardware :: Hardware Drivers",
    "Typing :: Typed",
]
dependencies = ["numpy>=1.25"]

[project.optional-dependencies]
test = ["pytest"]

[project.urls]
homepage = "https://micro-manager.org"
repository = "https://github.com/micro-manager/pymmcore"

[tool.setuptools.dynamic]
version = { attr = "pymmcore._version.__version__" }

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.package-data]
"*" = ["py.typed", ".pyi"]


[tool.cibuildwheel]
# Skip 32-bit builds, musllinux, and PyPy wheels on all platforms
# Note: use of PTHREAD_MUTEX_RECURSIVE_NP in DeviceThreads.h
# is specific to glibc and not available in musl-libc
skip = ["*-manylinux_i686", "*-musllinux*", "*-win32", "pp*"]
build = ["cp39-*", "cp310-*", "cp311-*", "cp312-*", "cp313-*"]
test-requires = "pytest"
test-command = 'pytest "{project}/tests" -v'
test-skip = "*-macosx_arm64"

[tool.cibuildwheel.macos]
# https://cibuildwheel.readthedocs.io/en/stable/faq/#apple-silicon
archs = ["x86_64", "arm64"]
# Needed for C++17 support on macOS
environment = { MACOSX_DEPLOYMENT_TARGET = "10.14" }

[tool.check-manifest]
ignore = [".editorconfig", "Dockerfile", "maintainer-notes.md", ".gitmodules"]
