# https://peps.python.org/pep-0517/
[build-system]
requires = [
    "meson-python",
    "ninja",
    "swig ==4.4.0",
    "numpy >=2.0.0",
]
build-backend = "mesonpy"

# https://peps.python.org/pep-0621/
[project]
name = "pymmcore"
description = "Python bindings for MMCore, Micro-Manager's device control layer"
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "LGPL-2.1-only" }
authors = [{ name = "Micro-Manager Team" }]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Lesser General Public License v2 (LGPLv2)",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering",
    "Topic :: System :: Hardware :: Hardware Drivers",
    "Typing :: Typed",
]
dependencies = ["numpy>=1.26"]

[project.optional-dependencies]
test = ["pytest"]

[project.urls]
homepage = "https://micro-manager.org"
repository = "https://github.com/micro-manager/pymmcore"

[tool.meson-python.args]
setup = ['-Dstrip=true']
install = ['--tags=python-runtime,runtime']
dist = ['--include-subprojects']

[tool.cibuildwheel]
# Skip 32-bit builds, musllinux, and PyPy wheels on all platforms
skip = ["*-manylinux_i686", "*-musllinux*", "*-win32", "pp*"]
build = ["cp310-*", "cp311-*", "cp312-*", "cp313-*", "cp314-*"]
test-requires = "pytest"
test-command = 'pytest "{project}/tests" -v'
test-skip = "*-macosx_arm64"

[tool.cibuildwheel.macos]
# https://cibuildwheel.readthedocs.io/en/stable/faq/#apple-silicon
archs = ["x86_64", "arm64"]
# Needed for C++17 support on macOS
environment = { MACOSX_DEPLOYMENT_TARGET = "10.14" }

[tool.check-manifest]
ignore = [".editorconfig", "Dockerfile", "maintainer-notes.md"]
