[metadata]
name = pymmcore
version = 10.1.1.69.1dev
author = Micro-Manager Team
author_email = info@micro-manager.org
url = https://github.com/micro-manager/pymmcore
description = Python bindings for MMCore, Micro-Manager's device control layer
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU Lesser General Public License v2 (LGPLv2)
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Scientific/Engineering
    Topic :: System :: Hardware :: Hardware Drivers
